<resources>
    <string name="app_name">MDPApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Robot Remote Control Application</string>
    <string name="nav_header_subtitle">MDP Team 2</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_maze">Maze</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_communication">Communication</string>
    <string name="update">Update</string>
    <string name="send">Send</string>
    <string name="persistent_text_strings">Persistent Text Strings</string>
    <string name="bidirectional_data_transmission">Bidirectional Data Transmission</string>
    <string name="clear">Clear</string>
    <string name="send_data">Send Data</string>
    <string name="receive_data">Receive Data</string>
    <string name="receive_data_placeholder">Your received text strings will appear here</string>
    <string name="available_devices">Available Devices</string>
    <string name="my_devices">My Devices</string>
    <string name="enable_bluetooth">Enable Discovery via Bluetooth</string>
    <string name="refresh_my_devices">Refresh My Devices</string>
    <string name="other_available_devices">Other Available Devices</string>
    <string name="refresh_other_available_devices">Refresh Other Available Devices</string>
    <string name="robot_status">Robot Status</string>
    <string name="n_a">N/A</string>
    <string name="waypoint">Waypoint</string>
    <string name="dummy_coordinates">(0, 0)</string>
    <string name="start_position">Start Position</string>
    <string name="selected_grid">Selected Grid</string>
    <string name="update_mode">Update Mode</string>
    <string name="auto">Auto</string>
    <string name="robot_movement_control">Robot Movement Control</string>
    <string name="tilt_sensing">Tilt Sensing</string>
    <string name="start_robot">Start Robot</string>
    <string name="start_fastest_path">Start Fastest Path</string>
    <string name="start_exploration">Start Exploration</string>
    <string name="start_image_exploration">Start Image Exploration</string>
    <string name="initiate_calibration">Initiate Calibration</string>
    <string name="alignment">Alignment</string>
    <string name="e_brake">E-Brake</string>
    <string name="reset">Reset</string>
    <string name="image_processing_string">Image Processing String</string>
    <string name="image_processing_string_sample">{(10,10,10),(10,10,10),(10,10,10),(10,10,10),(10,10,10)}</string>
    <string name="initial_image_processing_string">{ }</string>
    <string name="p1_string">P1</string>
    <string name="p2_string">P2</string>
    <string name="default_p1_string">
        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF</string>
    <string name="default_p2_string">
        0000000000000000000000000000000000000000000000000000000000000000000000000000</string>
    <string name="turn_right_button">↷</string>
    <string name="turn_left_button">↶</string>
    <string name="move_forward_button">↑</string>
</resources>