<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_maze">

    <fragment
        android:id="@+id/nav_maze"
        android:name="com.example.mdpapplication.ui.maze.MazeFragment"
        android:label="@string/menu_maze"
        tools:layout="@layout/fragment_maze" />

    <fragment
        android:id="@+id/nav_bluetooth"
        android:name="com.example.mdpapplication.ui.bluetooth.BluetoothFragment"
        android:label="@string/menu_bluetooth"
        tools:layout="@layout/fragment_bluetooth" />

    <fragment
        android:id="@+id/nav_communication"
        android:name="com.example.mdpapplication.ui.communication.CommunicationFragment"
        android:label="@string/menu_communication"
        tools:layout="@layout/fragment_communication" />
</navigation>